# restful-webserver

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_flags.txt  dev.sh  run_build.sh
.devcontainer/: devcontainer.json
cmake/: CodeCoverageReportConfig.cmake
configs/: cloud_config.txt  server_config.txt
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
docs/: README.md  debugging.md  development.md  documentation.md  quick-commit-guide.md
src/: server_main.cc
src/config/: config_parser.cc  config_parser.h
src/config/tests/: config_parser_test.cc
src/server/: mutex_pool.h  server.cc  server.h  session.cc  session.h  startup_utils.cc  startup_utils.h  tagged_exceptions.cc  tagged_exceptions.h
src/server/exceptions/: file_io_exception.h  invalid_id_exception.h  not_found_exception.h
src/server/filesystem/: filesystem_interface.cc  filesystem_interface.h  mock_filesystem.cc  mock_filesystem.h  real_filesystem.cc  real_filesystem.h
src/server/request_handlers/: echo_handler.cc  echo_handler.h  entity_handler.cc  entity_handler.h  handler_registry.cc  handler_registry.h  health_handler.cc  health_handler.h  not_found_handler.cc  not_found_handler.h  request_handler.cc  request_handler.h  sleep_handler.cc  sleep_handler.h  static_file_handler.cc  static_file_handler.h
src/server/tests/: echo_handler_test.cc  integration_test.py  mock_session.h  request_handler_test.cc  server_test.cc  session_test.cc  startup_utils_test.cc  static_file_handler_test.cc  tagged_exceptions_test.cc
src/util/: logger.cc  logger.h
static/: index.txt
tests/: integration_test.py
tests/common_files/: config_no_handle.txt  seq_config.conf  thread_config.conf
tests/server/: mock_session.h  mutex_pool_test.cc  server_test.cc  session_test.cc  startup_utils_test.cc  tagged_exceptions_test.cc
tests/server/filesystem/: filesystem_test.cc  mock_filesystem_test.cc  real_filesystem_test.cc
tests/server/request_handlers/: echo_handler_test.cc  entity_handler_test.cc  handler_registry_test.cc  health_handler_test.cc  not_found_handler_test.cc  request_handler_test.cc  sleep_handler_test.cc  static_file_handler_test.cc
